try to fix alignment

--- a/default.css
+++ b/default.css
@@ -32,6 +32,9 @@ code {
 }
 
 .footer {
+    padding: 0 20% 0;
+    align-content: center;
+    width: 60%;
     text-align: center;
     font-family: Consolas, "Helvetica Neue", Helvetica, sans-serif;
     font-weight: bolder;
@@ -40,7 +43,7 @@ code {
 
 .footer hr {
     border-top: 4px dotted #bbb;
-    margin: 0 20% 0.5rem;
+    margin: 0 auto 0.5rem;
     border-bottom: none;
   /* border-radius: 5px; */
 }
